fixed text overflow on ranking items

--- a/resources/css/ranking.css
+++ b/resources/css/ranking.css
@@ -128,6 +128,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .item-song-info>strong>a {
